// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoteClusterTable renders a row for an API-defined remote cluster 1`] = `
<tr
  class="euiTableRow euiTableRow-isSelectable euiTableRow-hasActions"
>
  <td
    class="euiTableRowCellCheckbox"
  >
    <div
      class="euiTableCellContent"
    >
      <div
        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
      >
        <input
          aria-label="Select this row"
          class="euiCheckbox__input"
          data-test-subj="checkboxSelectRow-test-cluster"
          id="_selection_column_test-cluster-checkbox"
          type="checkbox"
        />
        <div
          class="euiCheckbox__square"
        />
      </div>
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Name"
  >
    <div
      class="euiTableCellContent euiTableCellContent--overflowingContent"
    >
      <button
        class="euiLink euiLink--primary"
        data-test-subj="remoteClusterTableRowName-test-cluster"
        type="button"
      >
        test-cluster
      </button>
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Seeds"
  >
    <div
      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
    >
      seed, seed2
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Connection"
    width="160px"
  >
    <div
      class="euiTableCellContent euiTableCellContent--overflowingContent"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <svg
                class="euiIcon euiIcon--medium euiIcon--danger"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
                />
              </svg>
            </div>
            <div
              class="euiFlexItem remoteClustersConnectionStatus__message"
            >
              <div
                class="euiText euiText--medium"
              >
                Not connected
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            class="euiToolTipAnchor"
          >
            <svg
              aria-describedby="fakeId"
              aria-label="Info"
              class="euiIcon euiIcon--medium euiIcon--subdued"
              focusable="true"
              height="16"
              tabindex="0"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12zm0-1A5 5 0 1 0 8 3a5 5 0 0 0 0 10zm-.186-1.065A.785.785 0 0 1 7 11.12c0-.48.34-.82.814-.82.475 0 .809.34.809.82 0 .475-.334.815-.809.815zM5.9 6.317C5.96 5.168 6.755 4.4 8.048 4.4c1.218 0 2.091.759 2.091 1.8 0 .736-.36 1.304-1.03 1.707-.56.33-.717.56-.717 1.022v.305l-.1.1H7.47l-.1-.1v-.431c-.005-.646.302-1.104.987-1.514.527-.322.708-.59.708-1.047 0-.536-.416-.91-1.05-.91-.652 0-1.064.374-1.112.998l-.1.092H6l-.1-.105z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Connected nodes"
    width="160px"
  >
    <div
      class="euiTableCellContent"
    >
      <span
        class="euiTableCellContent__text"
      />
    </div>
  </td>
  <td
    class="euiTableRowCell euiTableRowCell--hasActions"
  >
    <div
      class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--showOnHover euiTableCellContent--overflowingContent"
    >
      <div
        class="euiTableCellContent__hoverItem"
      >
        <span
          class="euiToolTipAnchor"
        >
          <button
            aria-label="Delete remote cluster"
            class="euiButtonIcon euiButtonIcon--danger"
            data-test-subj="remoteClusterTableRowRemoveButton-test-cluster"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiButtonIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M11 3h5v1H0V3h5V1a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2zm-7.056 8H7v1H4.1l.392 2.519c.042.269.254.458.493.458h6.03c.239 0 .451-.189.493-.458l1.498-9.576H14l-1.504 9.73c-.116.747-.74 1.304-1.481 1.304h-6.03c-.741 0-1.365-.557-1.481-1.304l-1.511-9.73H9V5.95H3.157L3.476 8H8v1H3.632l.312 2zM6 3h4V1H6v2z"
                  id="trash-a"
                />
              </defs>
              <use
                href="#trash-a"
              />
            </svg>
          </button>
        </span>
      </div>
      <div
        class="euiTableCellContent__hoverItem"
      >
        <span
          class="euiToolTipAnchor"
        >
          <a
            aria-describedby="fakeId"
            aria-label="Edit remote cluster"
            class="euiButtonIcon euiButtonIcon--primary"
            data-test-subj="remoteClusterTableRowEditButton-test-cluster"
            href="/management/elasticsearch/remote_clusters/edit/test-cluster"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiButtonIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M12.148 3.148L11 2l-9 9v3h3l9-9-1.144-1.144-8.002 7.998a.502.502 0 0 1-.708 0 .502.502 0 0 1 0-.708l8.002-7.998zM11 1c.256 0 .512.098.707.293l3 3a.999.999 0 0 1 0 1.414l-9 9A.997.997 0 0 1 5 15H2a1 1 0 0 1-1-1v-3c0-.265.105-.52.293-.707l9-9A.997.997 0 0 1 11 1zM5 14H2v-3l3 3z"
                  id="pencil-a"
                />
              </defs>
              <use
                href="#pencil-a"
              />
            </svg>
          </a>
        </span>
      </div>
    </div>
  </td>
</tr>
`;

exports[`RemoteClusterTable renders a row with a tooltip for a remote cluster defined in elasticsearch.yml 1`] = `
<tr
  class="euiTableRow euiTableRow-isSelectable euiTableRow-hasActions"
>
  <td
    class="euiTableRowCellCheckbox"
  >
    <div
      class="euiTableCellContent"
    >
      <div
        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
      >
        <input
          aria-label="Select this row"
          class="euiCheckbox__input"
          data-test-subj="checkboxSelectRow-test-cluster-in-elasticsearch-yml"
          disabled=""
          id="_selection_column_test-cluster-in-elasticsearch-yml-checkbox"
          type="checkbox"
        />
        <div
          class="euiCheckbox__square"
        />
      </div>
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Name"
  >
    <div
      class="euiTableCellContent euiTableCellContent--overflowingContent"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            class="euiLink euiLink--primary"
            data-test-subj="remoteClusterTableRowName-test-cluster-in-elasticsearch-yml"
            type="button"
          >
            test-cluster-in-elasticsearch-yml
          </button>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            class="euiToolTipAnchor"
          >
            <svg
              aria-describedby="fakeId"
              aria-label="Info"
              class="euiIcon euiIcon--medium euiIcon--subdued"
              focusable="true"
              height="16"
              tabindex="0"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.5 11.508L7.468 8H6.25V7h2.401l.03 3.508H9.8v1H7.5zm-.25-6.202a.83.83 0 0 1 .207-.577c.137-.153.334-.229.59-.229.256 0 .454.076.594.23.14.152.209.345.209.576 0 .228-.07.417-.21.568-.14.15-.337.226-.593.226-.256 0-.453-.075-.59-.226a.81.81 0 0 1-.207-.568zM8 13A5 5 0 1 0 8 3a5 5 0 0 0 0 10zm0 1A6 6 0 1 1 8 2a6 6 0 0 1 0 12z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Seeds"
  >
    <div
      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
    >
      seed, seed2
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Connection"
    width="160px"
  >
    <div
      class="euiTableCellContent euiTableCellContent--overflowingContent"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <svg
                class="euiIcon euiIcon--medium euiIcon--danger"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
                />
              </svg>
            </div>
            <div
              class="euiFlexItem remoteClustersConnectionStatus__message"
            >
              <div
                class="euiText euiText--medium"
              >
                Not connected
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            class="euiToolTipAnchor"
          >
            <svg
              aria-describedby="fakeId"
              aria-label="Info"
              class="euiIcon euiIcon--medium euiIcon--subdued"
              focusable="true"
              height="16"
              tabindex="0"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12zm0-1A5 5 0 1 0 8 3a5 5 0 0 0 0 10zm-.186-1.065A.785.785 0 0 1 7 11.12c0-.48.34-.82.814-.82.475 0 .809.34.809.82 0 .475-.334.815-.809.815zM5.9 6.317C5.96 5.168 6.755 4.4 8.048 4.4c1.218 0 2.091.759 2.091 1.8 0 .736-.36 1.304-1.03 1.707-.56.33-.717.56-.717 1.022v.305l-.1.1H7.47l-.1-.1v-.431c-.005-.646.302-1.104.987-1.514.527-.322.708-.59.708-1.047 0-.536-.416-.91-1.05-.91-.652 0-1.064.374-1.112.998l-.1.092H6l-.1-.105z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Connected nodes"
    width="160px"
  >
    <div
      class="euiTableCellContent"
    >
      <span
        class="euiTableCellContent__text"
      />
    </div>
  </td>
  <td
    class="euiTableRowCell euiTableRowCell--hasActions"
  >
    <div
      class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--showOnHover euiTableCellContent--overflowingContent"
    >
      <div
        class="euiTableCellContent__hoverItem"
      >
        <span
          class="euiToolTipAnchor"
        >
          <button
            aria-label="Remote clusters defined in elasticsearch.yml can't be deleted"
            class="euiButtonIcon euiButtonIcon--danger"
            data-test-subj="remoteClusterTableRowRemoveButton-test-cluster-in-elasticsearch-yml"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiButtonIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M11 3h5v1H0V3h5V1a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2zm-7.056 8H7v1H4.1l.392 2.519c.042.269.254.458.493.458h6.03c.239 0 .451-.189.493-.458l1.498-9.576H14l-1.504 9.73c-.116.747-.74 1.304-1.481 1.304h-6.03c-.741 0-1.365-.557-1.481-1.304l-1.511-9.73H9V5.95H3.157L3.476 8H8v1H3.632l.312 2zM6 3h4V1H6v2z"
                  id="trash-a"
                />
              </defs>
              <use
                href="#trash-a"
              />
            </svg>
          </button>
        </span>
      </div>
      <div
        class="euiTableCellContent__hoverItem"
      >
        <span
          class="euiToolTipAnchor"
        >
          <button
            aria-describedby="fakeId"
            aria-label="Remote clusters defined in elasticsearch.yml can't be edited"
            class="euiButtonIcon euiButtonIcon--primary"
            data-test-subj="remoteClusterTableRowEditButton-test-cluster-in-elasticsearch-yml"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiButtonIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M12.148 3.148L11 2l-9 9v3h3l9-9-1.144-1.144-8.002 7.998a.502.502 0 0 1-.708 0 .502.502 0 0 1 0-.708l8.002-7.998zM11 1c.256 0 .512.098.707.293l3 3a.999.999 0 0 1 0 1.414l-9 9A.997.997 0 0 1 5 15H2a1 1 0 0 1-1-1v-3c0-.265.105-.52.293-.707l9-9A.997.997 0 0 1 11 1zM5 14H2v-3l3 3z"
                  id="pencil-a"
                />
              </defs>
              <use
                href="#pencil-a"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </td>
</tr>
`;
